--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                     <div class="profile-image">
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
-                    <h1 class="profile-name">Peixian MA</h1>
+                    <h1 class="profile-name">Peixian Ma</h1>
                     <p class="profile-title">
-                        <img src="assets/img/favicon-96x96.png" alt="HKUST Logo" class="institution-logo">HKUST(GZ)
+                        <img src="assets/img/favicon-96x96.png" alt="HKUST Logo" class="institution-logo", style="margin-bottom: 5px; ">HKUST(GZ)
                         <br>
                         Master of Philosophy (M.Phil.)
                         <br>
                         Data Science and Analytics
                     </p>
                     <p class="profile-location">
-                        <i class="fas fa-envelope" style="font-size: 1.2rem;"></i> 
+                        <i class="fas fa-envelope" style="font-size: 1.0rem; color: #636e72; margin-top: 3px;"></i> 
                         mpx0222@qq.com
                     </p>
                     <div class="social-icons-grid">
@@ -96,7 +96,7 @@
                                 <div class="tabs">
                                     <button class="tab-button active" data-tab="about">About Me</button>
                                     <button class="tab-button" data-tab="education">Education</button>
-                                    <button class="tab-button" data-tab="internship">Internship</button>
+                                    <button class="tab-button" data-tab="internship">Employment</button>
                                     <button class="tab-button" data-tab="service">Service</button>
                                 </div>
                                 <i class="fas fa-ellipsis-h"></i>
@@ -132,7 +132,7 @@
                                 <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Agent System, 
                                 <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Large Language Models and Model Reasoning,
                                 <i class="fas fa-cogs" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning. 
-                                I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.
+                            I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.
                             </p>
                             </div>
                                 <div id="education-tab" class="tab-pane">
@@ -214,10 +214,10 @@
     </footer>
 
     <div class="section-nav">
-        <div class="nav-dot" data-section="profile" data-tooltip="Profile"></div>
+        <div class="nav-dot" data-section="about" data-tooltip="Profile"></div>
         <div class="nav-dot" data-section="news" data-tooltip="News"></div>
-        <div class="nav-dot" data-section="publications" data-tooltip="Publications"></div>
-        <div class="nav-dot" data-section="awards" data-tooltip="Awards"></div>
+        <div class="nav-dot" data-section="education" data-tooltip="Publications"></div>
+        <div class="nav-dot" data-section="internship" data-tooltip="Awards"></div>
         <div class="nav-dot" data-section="projects" data-tooltip="Projects"></div>
     </div>
 
