--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peixian MA</title>
+    <title>Peixian Ma's Homepage</title>
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-192x192.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-512x512.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
@@ -185,7 +185,7 @@
                     </div>
                     
                     <!-- Projects card -->
-                    <div id="projects" class="card">
+                    <!-- <div id="projects" class="card">
                         <div class="card-header" style="background: #FFA502;">
                             <i class="fas fa-project-diagram"></i>
                             <h2>Projects</h2>
@@ -194,32 +194,32 @@
                         <div class="card-content">
                             <project-list></project-list>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </main>
 
     <footer class="quote-footer">
-        <div class="quote-container">
+        <!-- <div class="quote-container">
             <i class="fas fa-quote-left quote-icon"></i>
             <blockquote>
                 <p class="quote-text">If I have to do this, I will do this right.</p>
             </blockquote>
             <i class="fas fa-quote-right quote-icon"></i>
-        </div>
+        </div> -->
         <div class="quote-container">
-            <p class="quote-text"><br>© 2025 Peixian MA. All rights reserved.</p>
+            <p class="quote-text"><br>Peixian Ma © 2025</p>
         </div>
     </footer>
 
-    <div class="section-nav">
+    <!-- <div class="section-nav">
         <div class="nav-dot" data-section="about" data-tooltip="Profile"></div>
         <div class="nav-dot" data-section="news" data-tooltip="News"></div>
         <div class="nav-dot" data-section="education" data-tooltip="Publications"></div>
         <div class="nav-dot" data-section="internship" data-tooltip="Awards"></div>
         <div class="nav-dot" data-section="projects" data-tooltip="Projects"></div>
-    </div>
+    </div> -->
 
     <!-- Modal structure -->
     <div class="modal-overlay" id="modal-overlay">
