--- a/index.html
+++ b/index.html
@@ -121,14 +121,16 @@
                             I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.
                             </p>
 
-                            <div class="compact-section" id="education">
-                                <h3><i class="fas fa-graduation-cap"></i> Education</h3>
-                                <education-list mode="compact"></education-list>
-                            </div>
+                            <div class="compact-sections-row">
+                                <div class="compact-section" id="education">
+                                    <h3><i class="fas fa-graduation-cap"></i> Education</h3>
+                                    <education-list mode="compact"></education-list>
+                                </div>
 
-                            <div class="compact-section" id="internship">
-                                <h3><i class="fas fa-briefcase"></i> Employment</h3>
-                                <internship-list mode="compact"></internship-list>
+                                <div class="compact-section" id="internship">
+                                    <h3><i class="fas fa-briefcase"></i> Employment</h3>
+                                    <internship-list mode="compact"></internship-list>
+                                </div>
                             </div>
 
                             <div class="compact-section" id="service">
