--- a/index.html
+++ b/index.html
@@ -41,44 +41,35 @@
                     <div class="profile-image">
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
-                    <h1 class="profile-name">Peixian Ma</h1>
-                    <p class="profile-title">
-                        <img src="assets/img/favicon-96x96.png" alt="HKUST Logo" class="institution-logo", style="margin-bottom: 5px; ">HKUST(GZ)
-                        <br>
-                        Master of Philosophy (M.Phil.)
-                        <br>
-                        Data Science and Analytics
-                    </p>
-                    <p class="profile-location">
-                        <i class="fas fa-envelope" style="font-size: 1.0rem; color: #636e72; margin-top: 3px;"></i> 
-                        mpx0222@qq.com
-                    </p>
-                    <div class="social-icons-grid">
-                        <a href="https://github.com/MPX0222" class="" title="">
-                            <i class="fab fa-github" style="font-size: 1.6rem;"></i>
-                        </a>
-                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="" title="">
-                            <i class="fa-brands fa-google-scholar" style="font-size: 1.6rem;"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/in/MPX0222/" class="" title="">
-                            <i class="fab fa-linkedin" style="font-size: 1.6rem;"></i>
-                        </a>
-                        <a href="files/cv/CV2026_PeixianMa_EN.pdf" class="" title="">
-                            <i class="fa-solid fa-pager" style="font-size: 1.6rem;"></i>
-                        </a>
+                    <div class="profile-info">
+                        <h1 class="profile-name">Peixian Ma</h1>
+                        <div class="profile-title">
+                            <span class="profile-title-item">Master of Philosophy</span>
+                            <span class="profile-title-item">Data Science and Analytics</span>
+                            <span class="profile-title-item">
+                            The Hong Kong University of Science and Technology (Guangzhou)
+                            </span>
+                        </div>
+                        <div class="profile-title">
+                            <span class="profile-title-item profile-location">
+                            Email: pma929@connect.hkust-gz.edu.cn
+                            </span>
+                        </div>
+                        <div class="social-icons-grid">
+                            <a href="https://github.com/MPX0222" class="social-icon" data-title="GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-icon" data-title="Google Scholar">
+                                <i class="fa-brands fa-google-scholar"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/MPX0222/" class="social-icon" data-title="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="files/cv/CV2026_PeixianMa_EN.pdf" class="social-icon" data-title="Resume">
+                                <i class="fa-solid fa-pager"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="link-grid">
-                        <!-- <a href="assets/cv/CV_zh.pdf" class="cv-link">
-                            <i class="fas fa-file-alt"></i>
-                            <span>CV_zh</span>
-                        </a> -->
-                    </div>
-                </div>
-                <!-- 添加访问统计地图 -->
-                <div class="visitor-map">
-                    <a href="https://clustrmaps.com/site/1c4bq" title="Visit tracker">
-                        <img src="//clustrmaps.com/map_v2.png?t=tt&d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=a8a8a8&w=500&co=ffffff&ct=000000&w=300&h=200" alt="Visitor Map" />
-                    </a>
                 </div>
             </div>
 
@@ -92,11 +83,12 @@
                             <h2>Profile</h2>
                         </div>
                         <div class="card-content">
-                            <p>
-                                I received my M.Phil. degree in Data Science and Analytics (DSA) from <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology (Guangzhou) ~ HKUST(GZ)</a>. 
-                                During this study period, I received guidance and supervision from <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>.
-                                Before that, I have received the B.Eng. degree in Intelligence Science and Technology from <a href="https://www.jnu.edu.cn/">Jinan University (JNU)</a> in 2023. 
-                                Since 2025, I worked as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy</a> and was under the supervision of <a href="https://soledad921.github.io/chengjin_xu/">Dr. Chengjin Xu</a>.
+                            <h3 style="padding-bottom: 10px;">Welcome to My Homepage!</h3>
+                            <p> 
+                                I am an incoming Ph.D. student specializing in Artificial Intelligence (AI) at the <a href="https://www.hkust-gz.edu.cn/zh/">Hong Kong University of Science and Technology (Guangzhou)</a>, working under the supervision of <a href="">Prof. Chengwei Qin</a>.
+                                Prior to this, I completed my M.Phil. degree in Data Science and Analytics (DSA), where I was guided by <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>.
+                                I graduated from <a href="https://www.jnu.edu.cn/">Jinan University (JNU)</a> with a B.Eng. degree in Intelligence Science and Technology in 2023. 
+                                In 2025, I interned at the <a href="https://www.idea.edu.cn/">International Digital Economy Academy</a>, where I had the privilege of learning from <a href="https://soledad921.github.io/chengjin_xu/">Dr. Chengjin Xu</a>.
                                 I am honored to acknowledge and thank the organization I have joined during this two years:
                             </p>
                             <div class="research-units" style="text-align: center; margin: 20px 0;">
@@ -107,18 +99,29 @@
                                     </div>
                                     <div style="display: flex; align-items: center;">
                                         <img src="images/idea_logo.png" style="width: 50px; height: 24px; margin-right: 8px; object-fit: cover; object-position: center;">
-                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA-FinAI Lab & DataArc Tech Ltd. | AI金融与深度学习研究中心 & 数创弧光</a></p>
+                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA Research & DataArc Tech Ltd. | 粤港澳大湾区数字经济研究院 & 数创弧光</a></p>
                                     </div>
                                 </div>
                             </div>
+                            <h3>What I am doing?</h3>
                             <p> 
                                 Currently, I am committed to exploring the application of simple and efficient artificial intelligence algorithms in various fields.
                                 My research interest comprises 
-                                <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>User-friendly Database Application (e.g., NL2SQL, NL2DSL, Chat2DS), 
-                                <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Agent System, 
-                                <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Large Language Models and Model Reasoning,
-                                <i class="fas fa-cogs" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning. 
-                            I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.
+                                <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>AI for Database Application (e.g., NL2SQL, TableQA), 
+                                <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reasonable and Efficient Agent System (e.g., Agentic Reasoning, Tool-Calling Strategies), 
+                                <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning (e.g., Efficient Reinforcement Learning). 
+                                Moreover, I am also interested in AI for finance and economics. I am going to work as an assistant researcher of the new startup:
+                            </p>
+                            <div class="research-units" style="text-align: center; margin: 20px 0;">
+                                <div style="display: flex; justify-content: center; gap: 30px; margin-top: 15px;">
+                                    <div style="display: flex; align-items: center;">
+                                        <img src="images/paradooxai_logo.jpg" style="width: 30px; height: 30px; margin-right: 8px; object-fit: contain; object-position: center;">
+                                        <p style="margin: 0;"><a href="http://paradoox.ai/">Paradoox AI - The Next-Generation Trusted AI FinTech Middleware for Financial Institutions</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>
+                                Overall, I am continuously seeking for opportunities of outor collaboration. Feel free to contact me if you are interested in these research topics.
                             </p>
 
                             <div class="compact-sections-row">
@@ -170,6 +173,15 @@
                         </div>
                         <div class="card-content">
                             <award-list></award-list>
+                        </div>
+                    </div>
+
+                    <!-- 访问统计地图 -->
+                    <div class="visitor-map-section">
+                        <div class="visitor-map">
+                            <a href="https://clustrmaps.com/site/1c4bq" title="Visit tracker">
+                                <img src="//clustrmaps.com/map_v2.png?t=tt&d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=a8a8a8&w=600&co=ffffff&ct=000000&w=450&h=300" alt="Visitor Map" />
+                            </a>
                         </div>
                     </div>
                     
